fix: fix viewport height issue on smaller screens

--- a/hangman/styles.css
+++ b/hangman/styles.css
@@ -29,12 +29,15 @@ body {
   font-family: "Nova Square", sans-serif;
   font-size: 1.5rem;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   color: var(--color-dark-gray);
   background: var(--color-primary);
+  min-height: 100vh;
+  overflow-y: auto;
 }
 
 /* To darken the background image */
@@ -44,7 +47,7 @@ body::before {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background: linear-gradient(
     rgba(0, 0, 0, 0.6),
     rgba(0, 0, 0, 0.4)
